# proofloop

./: .gitignore  README.md  ROADMAP-dashboard.md
.github/workflows/: ci.yml  release.yml
cli/: AGENTS.md  LICENSE  README.md  TAXONOMY.md  pyproject.toml
cli/src/proofjury/: __init__.py  agent_detect.py  cli.py  config.py  context.py  envfile.py  gate.py  hooks.py  impact.py  session.py  sync.py  ux.py
cli/src/proofjury/checks/: __init__.py  build.py  diffbase.py  migrations.py  preprod.py  secrets.py  tests.py
cli/src/proofjury/judge/: _openai_compat.py  advisory.py  anthropic_direct.py  base.py  deterministic.py  mock.py  openai_direct.py  openrouter.py
cli/src/proofjury/memory/: __init__.py  export.py  recall.py  registry.py  store.py
cli/src/proofloop/: __init__.py  agent_detect.py  cli.py  config.py  context.py  gate.py  hooks.py  session.py  taskloop.py  taskrun_memory.py  tasksetup.py  tasksource.py  ux.py
cli/src/proofloop/checks/: __init__.py  base.py  build.py  config.py  env_vars.py  lockfile.py  migrations.py  preprod.py  secrets.py  tests.py  unfinished.py
cli/src/proofloop/judge/: __init__.py  _openai_compat.py  advisory.py  advisory_mock.py  anthropic_direct.py  base.py  deterministic.py  openai_direct.py  openrouter.py
cli/src/proofloop/memory/: __init__.py  export.py  recall.py  registry.py  schema.py  store.py
cli/tests/: conftest.py  test_action_points.py  test_advisory.py  test_advisory_hook.py  test_advisory_labels.py  test_agent_detect.py  test_build_preprod_checks.py  test_config.py  test_config_check.py  test_connect_cmd.py  test_cross_repo_recall.py  test_diff_checks.py  test_env_vars_check.py  test_envfile.py  test_gate.py  test_gate_sync_invariance.py  test_hooks.py  test_impact.py  test_init.py  test_judge.py  test_login_cmd.py  test_memory.py  test_memory_export.py  test_recall_weighting.py  test_registry.py  test_secrets_check.py  test_session_digest.py  test_signature_fixtures.py  test_status.py  test_sync.py  test_sync_config.py  test_task_judge.py  test_task_source.py  test_taskrun_memory.py  test_tests_check.py  test_version_sync.py
cli/tests/fixtures/: advisory_signatures.json
dashboard/: .env.example  .gitignore  README.md  auth.ts  docker-compose.yml  drizzle.config.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
dashboard/app/: globals.css  layout.tsx
dashboard/components/: AdvisoryActions.tsx  AdvisoryCard.tsx  DiffView.tsx  ImpactGraph.tsx  OverviewCharts.tsx  RepoTabs.tsx  badges.tsx
dashboard/db/: index.ts  schema.ts
dashboard/drizzle/: 0000_tough_blue_marvel.sql
dashboard/lib/: device.ts  ingest.ts  labels.ts  proofs.ts  signature.ts  storage.ts  tokens.ts
dashboard/scripts/: seed.ts
dashboard/tests/: device.test.ts  global-setup.ts  helpers.ts  ingest.test.ts  labels.test.ts  queries.test.ts  schema.test.ts  signature.test.ts  storage.test.ts
dashboard/types/: next-auth.d.ts
demo-app/: .proofjury.toml  .proofloop.toml  app.py  config.py  conftest.py  db.py  deploy.sh  notifications.py  payments.py
demo-app/tests/: test_payments.py
landing/: PRODUCT.md  README.md  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: EvidenceReceipt.tsx  GateStructure.tsx  MemoryShelf.tsx  Nav.tsx  StampBlocked.tsx  Terminal.tsx
landing/lib/: content.ts  terminal-scripts.ts
scripts/: demo.sh  mock_openrouter.py  seed-dashboard-demo.sh
(+54 files in other folders)
