[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proofjury"
version = "0.1.0"
description = "Correctness gate for AI-written code: block unready deploys with proof, remember every failure."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Proofjury" }]
keywords = ["deploy", "gate", "ai", "correctness", "guardrail"]
# NOTE: license is an SPDX expression above — do NOT add a `License ::`
# classifier; modern hatchling forbids mixing the two.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://proofjury.com"
Source = "https://github.com/kevincui1034/proofjury"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
proofjury = "proofjury.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/proofjury"]

[tool.pytest.ini_options]
testpaths = ["tests"]
